# theclevermachine

./: .gitignore  Gemfile  README.md  _config.yml  about.md  build_site  generate_tag_pages  generate_topic_pages  serve_site  topics.md
_drafts/: 2023-12-13-p-hacking-data-peeking.md  a-gentle-introduction-to-neural-networks.md  examples.md
_includes/: disqus.html  google_analytics.html  head.html  header.html  tag_archive.html  topic_archive.html
_layouts/: default.html  home.html  page.html  post.html  tag_archive.html  tag_feed.xml  tag_page.html  tag_page.old.html  topic_archive.html  topic_feed.xml  topic_page.html
_posts/: 2016-06-30-cutting-your-losses.md  2020-06-28-tags-test.md  2020-06-28-welcome-to-jekyll.markdown  2020-06-28-welcome-to-jekyll.md  2020-06-29-derivation-backpropagation.md  2020-06-29-derivation-common-neural-network-activation-functions.md  2020-06-29-derivation-ols-normal-equations.md  2020-06-30-a-gentle-introduction-to-neural-networks.md  2020-07-13-a-gentle-introduction-to-neural-networks.md  2020-07-19-supplemental-lemma-expectation-x-squared.md  2020-07-20-bias-variance-tradeoff.md  2020-08-16-svd-data-compression.md  (+7 more)
notebooks/: Pipfile  a-gentle-guide-to-artificial-neural-networks.ipynb  bias-variance-tradeoff.ipynb  common-activation-functions.ipynb  cutting-your-losses.ipynb  inferential_statistics_and_ab_experiment_analysis.ipynb  init_notebook.py  p-hacking-data-peeking.ipynb  p-hacking-n-chasing.ipynb  pyproject.toml  singular-value-decomposition.ipynb  svd-info-word-embeddings.ipynb  theclevermachine.yaml  utils.py  vis.py
(+200 files in other folders)
