[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "Example notebooks for theclevermachine blog"
authors = ["Dustin Stansbury <dustin.stansbury@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scipy = "*"
pandas = "*"
jupyter = "*"
scikit-learn = "*"
matplotlib = "*"
nltk = "*"
sklearn = "*"
abracadabra = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
